# dodge

./: .gitignore  Cargo.toml  config.toml
content/: index.md
content/pages/: about.md  contact.md  projects.md
content/posts/: 2025-09-14-markdown-showcase.md  2025-09-15-rust-tips.md  2025-09-16-hello-world.md  2025-09-17-first-post.md
src/: config.rs  lib.rs  main.rs  server.rs
src/cli/: args.rs  commands.rs  mod.rs
src/content/: markdown.rs  mod.rs  processor.rs
src/generator/: mod.rs  rss.rs  site_generator.rs
src/theme/: assets.rs  mod.rs  theme_type.rs
src/utils/: ascii_art.rs  mod.rs
templates/: 404.html
themes/: hacker.css  vercel.css
