[package]
name = "dodge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
comrak = "0.41.1"
glob = "0.3.3"
sailfish = "0.10.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_yaml = "0.9.34"
actix-web = "4.4"
actix-files = "0.6"
tokio = { version = "1.0", features = ["full"] }
rss = "2.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
